--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
-# zyuudenndennryuu
-充電電流を計算してくれるツール
 <!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ケーブル 充電電流計算ツール</title>
   <style>
     body {
       font-family: sans-serif;
       background: #eef2f5;
       padding: 20px;
+      margin: 0;
     }
     .container {
       display: flex;
@@ -17,19 +17,14 @@
       gap: 20px;
       justify-content: center;
     }
-    .card {
+    .card, .summary {
       background: #fff;
       border-radius: 8px;
       padding: 20px;
-      width: 600px;
+      width: 100%;
+      max-width: 600px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-    }
-    .summary {
-      width: 300px;
-      background: #fdfdfd;
-      border-radius: 8px;
-      padding: 20px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      box-sizing: border-box;
     }
     .field {
       margin-bottom: 12px;
@@ -41,14 +36,15 @@
     }
     select, input {
       width: 100%;
-      padding: 8px;
+      padding: 10px;
       border-radius: 4px;
       border: 1px solid #ccc;
       box-sizing: border-box;
+      font-size: 16px;
     }
     button {
       width: 100%;
-      padding: 10px;
+      padding: 12px;
       background: #3498db;
       color: #fff;
       border: none;
@@ -66,6 +62,7 @@
       border-radius: 4px;
       font-family: monospace;
       white-space: pre-wrap;
+      font-size: 14px;
     }
     .summary-table {
       font-family: sans-serif;
@@ -76,9 +73,17 @@
       padding: 8px;
       border: 1px solid #ccc;
       text-align: center;
+      font-size: 14px;
     }
     .summary-table th {
       background-color: #f0f0f0;
+    }
+
+    @media (max-width: 768px) {
+      .container {
+        flex-direction: column;
+        align-items: stretch;
+      }
     }
   </style>
 </head>
@@ -177,16 +182,14 @@
       }
 
       const CμFkm = capPerKm[sq];
-      const CμF = (CμFkm * Lm) / 1000; // μF
+      const CμF = (CμFkm * Lm) / 1000;
       const ω = 2 * Math.PI * f;
 
-      const Vph = Vline === 6600 ? 10350 : 5175; // 相電圧（指定）
-      const I_A = ω * (CμF / 1e6) * Vph; // A
+      const Vph = Vline === 6600 ? 10350 : 5175;
+      const I_A = ω * (CμF / 1e6) * Vph;
       const I_mA = I_A * 1000;
+      const I_total = Math.round(I_mA * 3);
 
-      const I_total = Math.round(I_mA * 3); // 三相合計 mA（四捨五入）
-
-      // トランス選定：どちらか1種のみ →できるだけ少ない台数 + リアクトル
       const results = [];
 
       for (const tName in TRANSFORMERS) {
@@ -208,7 +211,6 @@
         });
       }
 
-      // 少ない構成を選択
       results.sort((a, b) => a.total - b.total);
       const best = results[0];
 
@@ -237,7 +239,6 @@
       document.getElementById('result').textContent = `→ 三相合計の充電電流: ${I_total} mA`;
       document.getElementById('result').style.display = 'block';
 
-      // Summary 表に表示
       const summary = document.getElementById("summary-body");
       summary.innerHTML = `
         <tr><td>充電電流</td><td>${I_total} mA</td></tr>
